# vector-search-databricks-poc

./: .gitignore  databricks.yml  docs.md  example.env  pyproject.toml
docs/: docs.md  docsSlide.md
resource/: agent_deployment.yml  poc_agent_app.yml  vector_search_and_index_creation.yml
src/backend/: main.py
src/databricks/: query_endpoint.py  syntetic_data.py  syntetic_data_arxiv.py
src/databricks-app/: model_serving_utils.py
src/databricks/agent/: driver.py  template_agent.py
