[project]
name = "vector-search-dbrk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databricks-sdk>=0.67.0",
    "databricks-vectorsearch>=0.60",
    "fastapi>=0.118.3",
    "mlflow>=3.4.0",
    "pydantic>=2.12.0",
    "transformers>=4.57.0",
    "uvicorn>=0.37.0",
]
